fotos de fundadores add

--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -232,7 +232,7 @@
     <div class="flip-box mr-2">
       <div class="flip-box-inner">
         <div class="flip-box-front">
-          <img src="/assets/img/Erci.jpg" alt="Ercilia" style="width:300px;height:auto">
+          <img id="noix" src="/assets/img/Caio.jpg" alt="Ercilia" style="width:300px;height:auto;">
         </div>
         <div class="flip-box-back">
           <h2 class="mt-2">Caio Tairone</h2>
@@ -254,7 +254,7 @@
     <div class="flip-box mr-2">
       <div class="flip-box-inner">
         <div class="flip-box-front">
-          <img src="/assets/img/Erci.jpg" alt="Paris" style="width:300px;height:auto">
+          <img id="noix" src="/assets/img/Erci.jpg" alt="Paris" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
           <h2 class="mt-2">Ercília Dantas</h2>
@@ -275,7 +275,7 @@
     <div class="flip-box">
       <div class="flip-box-inner">
         <div class="flip-box-front">
-          <img src="/assets/img/Erci.jpg" alt="Paris" style="width:300px;height:auto">
+          <img id="noix" src="/assets/img/Leo.jpg" alt="Paris" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
          <h2 class="mt-2">Leonardo Silva</h2>
@@ -298,7 +298,7 @@
     <div class="flip-box mr-2">
       <div class="flip-box-inner">
         <div class="flip-box-front">
-          <img src="/assets/img/Erci.jpg" alt="Ercilia" style="width:300px;height:auto">
+          <img id="noix" src="/assets/img/Lucas.jpg" alt="Ercilia" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
           <h2 class="mt-2">Lucas William</h2>
@@ -320,7 +320,7 @@
     <div class="flip-box">
       <div class="flip-box-inner">
         <div class="flip-box-front">
-          <img src="/assets/img/Erci.jpg" alt="Paris" style="width:300px;height:auto">
+          <img id="noix" src="/assets/img/Vitin.jpg" alt="Paris" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
           <h2 class="mt-2">Vitor Miguel</h2>
