pagina inicial com metodos operantes

--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -3,10 +3,11 @@
     <div class="container-fluid p-0">
       <!-- logotipo -->
       <a class="navbar-brand m-0 ml-5 pb-3 pt-3" href="#secao01">
-        <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="120px" height="120px"
+        <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="100px" height="100px"
           class="img-fluid">
       </a>
       <!-- /logotipo -->
+
       <!-- itens_do_menu -->
       <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +51,7 @@
 </div>
 
 <!-- quem_somos -->
-<div id="secao02" class="d-flex align-items-center container-fluid">
+<div id="secao02" class="d-flex align-items-center container-fluid pb-5 pt-5">
   <div class="container-fluid">
     <h1 class="text-center pt-5 pb-5">Quem somos</h1>
     <p class="text-center fs-18" style="margin-right: 5%; margin-left: 5%;">
@@ -66,12 +67,14 @@
 
 <!-- img_pausa -->
 <div id="secao03">
-  <img src="/assets/img/fig02.jpg" alt="mulher codando" class="img-fluid w-100">
+  <div class="pt-5">
+    <img src="/assets/img/fig02.jpg" alt="mulher codando" class="img-fluid w-100" style="height: auto;">
+  </div>
 </div>
 <!-- /img_pausa -->
 
 <!-- faca_parte -->
-<div id="secao04">
+<div id="secao04" class="pt-5">
   <div class="d-flex align-items-center container-fluid">
     <div class="container-fluid">
       <h1 class="text-center pt-5 pb-5">Faça parte</h1>
@@ -149,7 +152,7 @@
 <!-- /faca_parte -->
 
 <!-- conexoes -->
-<div id="secao05">
+<div id="secao05" class="pb-5 pt-5">
   <div class="d-flex align-items-center container-fluid">
     <div class="container-fluid">
       <h1 class="text-center pt-5 pb-5">Conexões</h1>
@@ -161,7 +164,7 @@
   <!-- carrosel -->
   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0"  class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
     </ol>
@@ -214,7 +217,6 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <br><br><br>
   <!-- carrosel -->
 </div>
 <!-- /conexoes -->
@@ -235,15 +237,15 @@
           <img id="noix" src="/assets/img/Caio.jpg" alt="Ercilia" style="width:300px;height:auto;">
         </div>
         <div class="flip-box-back">
-          <h2 class="mt-2">Caio Tairone</h2>
-          <p class="mt-2 mb-2 font-weight-bolder" > Desenvolverdor Fullstack JAVA</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque at voluptatum omnis
-            labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
+          <h2 class="mt-2 text-center">Caio Tairone</h2>
+          <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
+          <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
+            at voluptatum omnis labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto
+            necessitatibus.</p>
           <div class="pt-2">
-            <ul class="social-icons">
+            <ul class="social-icons text-right">
               <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
-              <li><a class="github" href="#" target="_blank"><span
-                    class="fab fa-github-alt"></span></a>
+              <li><a class="github" href="#" target="_blank"><span class="fab fa-github-alt"></span></a>
               </li>
               <li><a class="linkedin" href="#" target="_blank"><span class="fab fa-linkedin-in"></span></a></li>
             </ul>
@@ -257,15 +259,15 @@
           <img id="noix" src="/assets/img/Erci.jpg" alt="Paris" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
-          <h2 class="mt-2">Ercília Dantas</h2>
-          <p class="mt-2 mb-2 font-weight-bolder"> Desenvolverdora Fullstack JAVA</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque at voluptatum omnis
+          <h2 class="mt-2 text-center">Ercília Dantas</h2>
+          <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdora Fullstack JAVA</p>
+          <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
+            at voluptatum omnis
             labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
           <div class="pt-2">
-            <ul class="social-icons">
+            <ul class="social-icons text-right">
               <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
-              <li><a class="github" href="#" target="_blank"><span class="fab fa-github-alt"></span></a>
-              </li>
+              <li><a class="github" href="#" target="_blank"><span class="fab fa-github-alt"></span></a></li>
               <li><a class="linkedin" href="#" target="_blank"><span class="fab fa-linkedin-in"></span></a></li>
             </ul>
           </div>
@@ -278,18 +280,19 @@
           <img id="noix" src="/assets/img/Leo.jpg" alt="Paris" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
-         <h2 class="mt-2">Leonardo Silva</h2>
-         <p class="mt-2 mb-2 font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
-         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque at voluptatum omnis
-           labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
-         <div class="pt-2">
-           <ul class="social-icons">
-             <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
-             <li><a class="github" href="#" target="_blank"><span class="fab fa-github-alt"></span></a>
-             </li>
-             <li><a class="linkedin" href="#" target="_blank"><span class="fab fa-linkedin-in"></span></a></li>
-           </ul>
-         </div>
+          <h2 class="mt-2 text-center">Leonardo Silva</h2>
+          <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
+          <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
+            at voluptatum omnis
+            labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
+          <div class="pt-2">
+            <ul class="social-icons text-right">
+              <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
+              <li><a class="github" href="#" target="_blank"><span class="fab fa-github-alt"></span></a>
+              </li>
+              <li><a class="linkedin" href="#" target="_blank"><span class="fab fa-linkedin-in"></span></a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -301,12 +304,13 @@
           <img id="noix" src="/assets/img/Lucas.jpg" alt="Ercilia" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
-          <h2 class="mt-2">Lucas William</h2>
-          <p class="mt-2 mb-2 font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque at voluptatum omnis
+          <h2 class="mt-2 text-center">Lucas William</h2>
+          <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
+          <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
+            at voluptatum omnis
             labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
           <div class="pt-2">
-            <ul class="social-icons">
+            <ul class="social-icons text-right">
               <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
               <li><a class="github" href="#" target="_blank"><span class="fab fa-github-alt"></span></a>
               </li>
@@ -323,13 +327,14 @@
           <img id="noix" src="/assets/img/Vitin.jpg" alt="Paris" style="width:300px;height:auto">
         </div>
         <div class="flip-box-back">
-          <h2 class="mt-2">Vitor Miguel</h2>
-          <p class="mt-2 mb-2 font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque at voluptatum omnis
+          <h2 class="mt-2 text-center">Vitor Miguel</h2>
+          <p class="mt-2 mb-2 text-center font-weight-bolder"> Desenvolverdor Fullstack JAVA</p>
+          <p class="text-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores alias doloremque
+            at voluptatum omnis
             labore temporibus, sequi blanditiis unde eligendi natus nisi officiis iusto necessitatibus.</p>
           <div class="pt-2">
-            <ul class="social-icons">
-              <li><a class="instagram" href="#"><span class="fab fa-instagram" target="_blank"></span></a></li>
+            <ul class="social-icons text-right">
+              <li><a class="instagram" href="#" target="_blank"><span class="fab fa-instagram"></span></a></li>
               <li><a class="github" href="#" target="_blank"><span class="fab fa-github-alt"></span></a>
               </li>
               <li><a class="linkedin" href="#" target="_blank"><span class="fab fa-linkedin-in"></span></a></li>
@@ -339,7 +344,5 @@
       </div>
     </div>
   </div>
-
 </div>
-
 <!-- fundadores -->
