--- a/FrontEnd/ConectaMais/src/app/rodape/rodape.component.html
+++ b/FrontEnd/ConectaMais/src/app/rodape/rodape.component.html
@@ -32,8 +32,8 @@
             <li><a href="#">I-mei</a></li>
             <li><a href="#">ColaborArt</a> </li>
             <li><a href="#">Rural Sabor</a></li>
-            <li><a href="#">Equipe 5</a></li>
-            <li><a href="#">Equipe 6</a></li>
+            <li><a href="#">Ecompra</a></li>
+            <li><a href="#">RaizAgro</a></li>
           </ul>
         </div>
       </div>
