--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.css
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.css
@@ -32,23 +32,21 @@ h1 {
 #secao02 {
   margin: 0;
   border: 0;
-  height: 500px;
+  height: max-content;
   background-color: #007A80;
-  margin: 0;
 }
 
-#section03 {
-  background-color: rgba(27, 54, 89, 0.6);
-  background-repeat: no-repeat;
-  background-size: 100%;
+#secao03 {
   margin: 0;
-  height: 363px;
+  border: 0;
+  height: max-content;
+  background-color: #007A80;
 }
 
 #secao04 {
   margin: 0;
   border: 0;
-  height: fit-content;
+  height: max-content;
   background-color: #007A80;
   margin: 0;
 }
@@ -67,14 +65,6 @@ h1 {
   height: max-content;
   background-color: #007A80;
   margin: 0;
-}
-
-#navbar-changing {
-  background-color: transparent;
-}
-
-#navbar-changing.scrolled {
-  background-color: #1B3659;
 }
 
 .fs-65 {
@@ -148,15 +138,15 @@ h1 {
 }
 
 .classnew .card:nth-child(1) .icon {
-  background: #FF914D;
+  background: #1B3659;
 }
 
 .classnew .card:nth-child(2) .icon {
-  background: #FF914D;
+  background: #1B3659;
 }
 
 .classnew .card:nth-child(3) .icon {
-  background: #FF914D;
+  background: #1B3659;
 }
 
 
@@ -272,34 +262,30 @@ i {
   position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-box:hover .flip-box-inner {
   transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
 .flip-box-front,
 .flip-box-back {
   position: absolute;
   width: 100%;
   height: 100%;
   -webkit-backface-visibility: hidden;
-  /* Safari */
+
   backface-visibility: hidden;
 }
 
-/* Style the front side (fallback if image is missing) */
+
 .flip-box-front {
   background-color: #bbb;
   color: black;
 }
 
-/* Style the back side */
 .flip-box-back {
   background-color: #FF914D;
   color: white;
@@ -354,10 +340,6 @@ i {
   height: 34px;
   width: 34px;
   font-size: 14px
-}
-
-.social-icons a.facebook:hover {
-  background-color: #3b5998
 }
 
 .social-icons a.instagram:hover {
