testes de routerLink e scrollHeight

--- a/FrontEnd/ConectaMais/src/app/login/login.component.html
+++ b/FrontEnd/ConectaMais/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div id="bg-login" class="img-fluid">
 
-    <div class="row ">
+    <div class="row mx-0 " id="test">
         <div class="col-md-2"></div>
         <div class="col-md-4 d-inline justify-content-center text-center  " id="form-login">
 
@@ -16,10 +16,10 @@
                 <div class="form-group">
                     <label for="exampleInputPassword1">Senha</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                    <small id="emailHelp" class="form-text text-muted">Clique aqui para se cadastrar.</small>
+                    <a routerLink = '/home'><small id="emailHelp" class="form-text text-muted text-right">Clique aqui para se cadastrar.</small></a>
                 </div>
                 <div class="col-md-12 d-flex justify-content-center ">
-                    <button type="submit" class="btn btn-primary">Entrar</button>
+                    <button class="button button1">Entrar</button>
                 </div>
 
             </form>
