--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" href="#secao05">CONEXÕES</a>
           </li>
           <li class="nav-item" style="padding-right: 0% !important;">
-            <a class="btn btn-outline-secondary p-2" role="button" data-bs-toggle="button">ENTRAR</a>
+            <a  class="btn btn-outline-secondary p-2" (click)='rotaEntrar()'>ENTRAR</a>
           </li>
         </ul>
       </div>
