--- a/FrontEnd/ConectaMais/src/app/login/login.component.css
+++ b/FrontEnd/ConectaMais/src/app/login/login.component.css
@@ -5,6 +5,7 @@
     background-size: 100%;
     background-position: center;
     margin: 0;
+    border-right: 0px;
     border: 0;
     height: max-content;
     }
@@ -19,10 +20,33 @@
     }
   
     #form-login h3{
-      
       padding: 0;
       margin: 0;
       margin-bottom: 20px;
       text-align: center;
       
+  }
+
+  .button {
+    background-color: #007A80; /* Green */
+    border-radius: 10px;
+    color: white;
+    padding: 12px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #007A80;
+  }
+  .button1:hover {
+    background-color: #007A80;
+    color: white;
   }
