menu separado com  rotas funcionando para home, entrar e conheca

--- a/FrontEnd/ConectaMais/src/app/app.component.html
+++ b/FrontEnd/ConectaMais/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-conheca-inst></app-conheca-inst>
+<app-menu-inicial *ngIf="showHead"></app-menu-inicial>
+
+<router-outlet></router-outlet>
 
 <app-rodape></app-rodape>
