--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -1,48 +1,15 @@
 <div id="secao01" class="">
-  <nav id="navbar-changing" class="navbar navbar-expand-lg navbar-dark fixed-top p-0 w-100">
-    <div class="container-fluid p-0">
-      <!-- logotipo -->
-      <a class="navbar-brand m-0 ml-5 pb-3 pt-3" href="#secao01">
-        <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="100px" height="100px"
-          class="img-fluid">
-      </a>
-      <!-- /logotipo -->
-
-      <!-- itens_do_menu -->
-      <button class="navbar-toggler mr-5" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse d-flex justify-content-end p-0" id="navbarSupportedContent">
-        <ul class=" nav navbar-nav mr-5 d-flex align-items-center">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#secao02">QUEM SOMOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#secao04">FAÇA PARTE</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#secao05">CONEXÕES</a>
-          </li>
-          <li class="nav-item" style="padding-right: 0% !important;">
-            <a class="btn btn-outline-secondary p-2" role="button" data-bs-toggle="button">ENTRAR</a>
-          </li>
-        </ul>
-      </div>
-      <!-- /itens_do_menu -->
-    </div>
-  </nav>
   <!-- texto_chamada -->
   <div class="container m-0 ml-5 pb-5" style="padding-top: 23%;">
-    <p class="w-50 fw-bold fs-65 m-0 mb-4" style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">Se conecte
-      ainda mais<br>à Tecnologia</p>
+   <p class="w-50 fw-bold fs-65 m-0 mb-4" style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">
+      Se conecte ainda mais<br>à Tecnologia</p>
     <p class="w-75 fw-bold fs-16 m-0" style="text-shadow: 2px 2px 4px #000000;">Você quer aprender
       a programar, mas não sabe por onde começar.
       <br> O Cenecta+ te ajuda! Busque por programas, bootcamps e hackathons.<br>Mais oportunidades ao alcance de
       todos!
       Venha construir novas conexões!</p>
     <div class="m-0 mt-4">
-      <a class="btn btn-outline-secondary mr-3 p-2" href="#" role="button">CONHEÇA AS INSTITUIÇÕES</a>
+      <a class="btn btn-outline-secondary mr-3 p-2" role="button" routerLink='/conheca'>CONHEÇA AS INSTITUIÇÕES</a>
       <a class="btn btn-outline-secondary p-2" href="#" role="button"><span
           class="fas fa-hand-holding-heart d-inline-flex align-self-center"></span> APOIE</a>
     </div>
@@ -90,13 +57,15 @@
   <div class="container-fluid">
     <div class="classnew">
       <div class="card mr-3">
-        <div class="face face1">
-          <div class="content">
-            <div class="icon">
-              <i class="fas fa-graduation-cap"></i>
+        <a href="#" target="_blank">
+          <div class="face face1">
+            <div class="content">
+              <div class="icon">
+                <i class="fas fa-graduation-cap"></i>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
         <div class="face face2">
           <div class="content">
             <h3>
@@ -106,15 +75,18 @@
               gostaria de conhecer mais a área, quero estudar e conhecer os projetos disponíveis.</p>
           </div>
         </div>
+
       </div>
       <div class="card mr-3">
-        <div class="face face1">
-          <div class="content">
-            <div class="icon">
-              <i class="fas fa-handshake"></i>
+        <a href="#" target="_blank">
+          <div class="face face1">
+            <div class="content">
+              <div class="icon">
+                <i class="fas fa-handshake"></i>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
         <div class="face face2">
           <div class="content">
             <h3>
@@ -127,21 +99,23 @@
         </div>
       </div>
       <div class="card">
-        <div class="face face1">
-          <div class="content">
-            <div class="icon">
-              <i class="fas fa-hand-holding-heart" aria-hidden="true"></i>
+        <a href="#" target="_blank">
+          <div class="face face1">
+            <div class="content">
+              <div class="icon">
+                <i class="fas fa-hand-holding-heart" aria-hidden="true"></i>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
         <div class="face face2">
           <div class="content">
             <h3>
               <a href="#" target="_blank" class="font-weight-bold">DOE</a>
             </h3>
             <p class="card-text text-center font-weight-bolder" style="color: #1B3659;">Acredito que a união de esforços
-              e gente boa nos
-              leva muito mais longe e quero contribuir ativamente com a transformação social do país.</p>
+              e gente boa nos leva muito mais longe e quero contribuir ativamente com a transformação social do país.
+            </p>
           </div>
         </div>
       </div>
@@ -173,13 +147,13 @@
         <img src="/assets/img/fig04.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.7);">
           <h5 class="mt-4 mb-4">Pragrama</h5>
-          <p class="mb-2">Nulla vitae elit libero, a pharetra augue mollis interdum. Nulla vitae elit libero, a pharetra
-            augue mollis
-            interdum.Nulla vitae elit libero, a pharetra augue mollis interdum.Nulla vitae elit libero, a pharetra augue
-            mollis interdum.Nulla vitae elit libero, a pharetra augue mollis interdum.Nulla vitae elit libero, a
-            pharetra augue mollis interdum.Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          <p class="text-right mb-4">Fonte: <a href="https://www.universidadedointercambio.com/o-que-e-bootcamp/"
-              target="_blank" class="alert-link">Universidade do intercâmbio</a></p>
+          <p class="mb-2">Os programas tem um prazo mais longo, cerca de 6 a 24 meses, onde são ensinados
+            os fundamentos da programação como lógica e estrutura de dados, fundamentando o apredizado das mais variadas
+            linguagens. Habilidades comportamentais são um foco também. Eles são voltados ao mercado de trabalho e
+            usualmente são pagos, alguns no modelo ISA (Income Share Agreement), onde você só paga uma porcentagem do
+            seu salário, se conseguir emprego em um determinado período de tempo.</p>
+          <p class="text-right mb-4">Fonte: <a href="https://www.betrybe.com/formacao-desenvolvimento-web"
+              target="_blank" class="alert-link">Trybe</a></p>
         </div>
       </div>
       <div class="carousel-item" style="height: 500px;">
@@ -187,8 +161,8 @@
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.7);">
           <h5 class="mt-4 mb-4">Bootcamp</h5>
           <p class="mb-2">Bootcamps são, de modo geral, “intensivões” que promovem uma imersão completa em um
-            determinado tema em
-            um período de tempo relativamente curto, que geralmente varia entre 3 semanas e 4 meses. É uma experiência
+            determinado tema em um período de tempo relativamente curto, que geralmente varia entre 3 semanas e 4 meses.
+            É uma experiência
             ideal para quem esteja começando uma carreira profissional e tenham o interesse de adquirir conhecimentos
             mais aprofundados na sua área de atuação de uma forma mais densa.</p>
           <p class="text-right mb-4">Fonte: <a href="https://www.universidadedointercambio.com/o-que-e-bootcamp/"
