--- a/FrontEnd/ConectaMais/src/app/login/login.component.html
+++ b/FrontEnd/ConectaMais/src/app/login/login.component.html
@@ -1,31 +1,29 @@
 <div id="bg-login" class="img-fluid">
-
-    <div class="row ">
+     <!-- caixa de entrada login -->
+    <div class="row mx-0" id="test">
         <div class="col-md-2"></div>
         <div class="col-md-4 d-inline justify-content-center text-center  " id="form-login">
-
             <h3 class="mt-3">LOGIN</h3>
-
             <form class="mx-5  text-left">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Endereço de email</label>
 
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-                    <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                      placeholder="Seu email">
+                    <small id="emailHelp" class="form-text text-muted">Não compartilhamos seu email com
+                      ninguém.</small>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Senha</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                    <small id="emailHelp" class="form-text text-muted">Clique aqui para se cadastrar.</small>
+                     <a routerLink='/home'><small id="emailHelp" class="form-text text-muted text-right">Clique aqui
+                         para se cadastrar.</small></a>
                 </div>
                 <div class="col-md-12 d-flex justify-content-center ">
-                    <button type="submit" class="btn btn-primary">Entrar</button>
+                     <button class="button button1">Entrar</button>
                 </div>
-
             </form>
         </div>
-        
     </div>
-
-
+    <!-- caixa de entrada login  -->
 </div>
