--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -1,4 +1,5 @@
-<div id="secao01" class="">
+<span class="anchor" id="inicio"></span>
+<div class="secao01">
   <!-- texto_chamada -->
   <div class="container m-0 ml-5 pb-5" style="padding-top: 23%;">
    <p class="w-50 fw-bold fs-65 m-0 mb-4" style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">
@@ -18,7 +19,8 @@
 </div>
 
 <!-- quem_somos -->
-<div id="secao02" class="d-flex align-items-center container-fluid pb-5 pt-5">
+<span class="anchor" id="quemSomos"></span>
+<div class="secao02 d-flex align-items-center container-fluid pb-5 pt-5">
   <div class="container-fluid">
     <h1 class="text-center pt-5 pb-5">Quem somos</h1>
     <p class="text-center fs-18" style="margin-right: 5%; margin-left: 5%;">
@@ -33,7 +35,7 @@
 <!-- /quem_somos -->
 
 <!-- img_pausa -->
-<div id="secao03">
+<div class="secao03">
   <div class="pt-5">
     <img src="/assets/img/fig02.jpg" alt="mulher codando" class="img-fluid w-100" style="height: auto;">
   </div>
@@ -41,7 +43,8 @@
 <!-- /img_pausa -->
 
 <!-- faca_parte -->
-<div id="secao04" class="pt-5">
+<span class="anchor" id="facaParte"></span>
+<div class="secao04 pt-5">
   <div class="d-flex align-items-center container-fluid">
     <div class="container-fluid">
       <h1 class="text-center pt-5 pb-5">Faça parte</h1>
@@ -126,7 +129,8 @@
 <!-- /faca_parte -->
 
 <!-- conexoes -->
-<div id="secao05" class="pb-5 pt-5">
+<span class="anchor" id="conexoes"></span>
+<div class="secao05 pb-5 pt-5">
   <div class="d-flex align-items-center container-fluid">
     <div class="container-fluid">
       <h1 class="text-center pt-5 pb-5">Conexões</h1>
@@ -196,7 +200,7 @@
 <!-- /conexoes -->
 
 <!-- fundadores -->
-<div id="secao06" class="pb-5">
+<div class="secao06 pb-5">
   <div class="d-flex align-items-center container-fluid">
     <div class="container-fluid">
       <h1 class="text-center pt-5 pb-5">Fundadores</h1>
