--- a/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
@@ -1,7 +1,7 @@
   <nav id="navbar-changing" class="navbar navbar-expand-lg navbar-dark fixed-top p-0 w-100">
     <div class="container-fluid p-0">
       <!-- logotipo -->
-      <a class="navbar-brand m-0 ml-5 pb-3 pt-3" href="#secao01">
+      <a class="navbar-brand m-0 ml-5 pb-3 pt-3" href="/home#inicio">
         <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="100px" height="100px"
           class="img-fluid">
       </a>
@@ -14,13 +14,13 @@
       <div class="collapse navbar-collapse d-flex justify-content-end p-0" id="navbarSupportedContent">
         <ul class=" nav navbar-nav mr-5 d-flex align-items-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home/#secao02">QUEM SOMOS</a>
+            <a class="nav-link active" aria-current="page" href="/home#quemSomos">QUEM SOMOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/home/#secao04">FAÇA PARTE</a>
+            <a class="nav-link active" href="/home#facaParte">FAÇA PARTE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/home/#secao05">CONEXÕES</a>
+            <a class="nav-link active" href="/home#conexoes">CONEXÕES</a>
           </li>
           <li class="nav-item" style="padding-right: 0% !important;">
             <a class="btn btn-outline-secondary p-2" routerLink='/entrar'>ENTRAR</a>
@@ -30,4 +30,3 @@
       <!-- /itens_do_menu -->
     </div>
   </nav>
-
