componente menuUsuario add

--- a/FrontEnd/ConectaMais/src/app/app.component.html
+++ b/FrontEnd/ConectaMais/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-menu-inicial *ngIf="routeHidden"></app-menu-inicial>
+<app-menu-usuario></app-menu-usuario>
 
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
 
 <app-rodape *ngIf="routeHidden"></app-rodape>
