pagina de apoie add

--- a/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
@@ -14,13 +14,13 @@
       <div class="collapse navbar-collapse d-flex justify-content-end p-0" id="navbarSupportedContent">
         <ul class=" nav navbar-nav mr-5 d-flex align-items-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home#quemSomos">QUEM SOMOS</a>
+            <a class="nav-link" href="/home#quemSomos">QUEM SOMOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/home#facaParte">FAÇA PARTE</a>
+            <a class="nav-link " href="/home#facaParte">FAÇA PARTE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/home#conexoes">CONEXÕES</a>
+            <a class="nav-link " href="/home#conexoes">CONEXÕES</a>
           </li>
           <li class="nav-item" style="padding-right: 0% !important;">
             <a class="btn btn-outline-secondary p-2" routerLink='/entrar'>ENTRAR</a>
