--- a/FrontEnd/ConectaMais/src/app/menu-usuario/menu-usuario.component.html
+++ b/FrontEnd/ConectaMais/src/app/menu-usuario/menu-usuario.component.html
@@ -39,9 +39,14 @@
       <li class="nav-item px-0 py-2">
         <a href="#" class="nav-link text-white text-uppercase">Feed</a>
       </li>
-      <li class="nav-item py-2 px-0">
+      <li class="nav-item pt-2 pb-4 px-0">
         <a class="btn btn-outline-secondary py-1 px-5 " routerLink='/entrar'>SAIR</a>
       </li>
+     
+        <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by
+          <a class="alert-link text-white">Conecta+</a>.
+        </p>
+     
     </ul>
   </div>
 </div>
