--- a/FrontEnd/ConectaMais/src/app/menu-usuario/menu-usuario.component.css
+++ b/FrontEnd/ConectaMais/src/app/menu-usuario/menu-usuario.component.css
@@ -98,3 +98,13 @@
   background-color: #1B3659;
 }
 
+.copyright-text {
+  margin: 0;
+  color: white;
+  font-size: 7.8pt;
+  text-align: center;
+}
+
+.alert-link:hover {
+  color: #FF914D;
+}
