--- a/FrontEnd/ConectaMais/src/app/rodape/rodape.component.html
+++ b/FrontEnd/ConectaMais/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-  <footer class="site-footer w-100">
+  <footer class="site-footer w-100" id="rodape">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6">
