correçoes no texto pg inicial

--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -11,7 +11,7 @@
         Venha construir novas conexões!</p>
       <div class="m-0 mt-4">
         <a class="btn btn-outline-secondary mr-3 p-2" role="button" routerLink='/conheca'>CONHEÇA AS INSTITUIÇÕES</a>
-        <a class="btn btn-outline-secondary p-2" href="#" role="button"><span
+        <a class="btn btn-outline-secondary p-2" href="/apoie" role="button"><span
             class="fas fa-hand-holding-heart d-inline-flex align-self-center"></span> APOIE</a>
       </div>
     </div>
@@ -140,7 +140,7 @@
       <div class="container-fluid">
         <h1 class="text-center pt-5 pb-5">Conexões</h1>
         <p class="text-center fs-18 mb-5" style="margin-right: 5%; margin-left: 5%;">
-          Nossa plataforma promove sua conexão em três modalidades: Pragramas, Bootcamps e Hackathons. Você não sabe
+          Nossa plataforma promove sua conexão em três modalidades: Programas, Bootcamps e Hackathons. Você não sabe
           como
           elas funcionam? Vem que a gente te explica!</p>
       </div>
@@ -156,7 +156,7 @@
         <div class="carousel-item active" style="height: 500px;">
           <img src="/assets/img/fig04.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.7);">
-            <h5 class="mt-4 mb-4">Pragrama</h5>
+            <h5 class="mt-4 mb-4">Programa</h5>
             <p class="mb-2">Os programas tem um prazo mais longo, cerca de 6 a 24 meses, onde são ensinados
               os fundamentos da programação como lógica e estrutura de dados, fundamentando o apredizado das mais
               variadas
