icone no entrar e rotas add e funcionando

--- a/FrontEnd/ConectaMais/src/app/login/login.component.html
+++ b/FrontEnd/ConectaMais/src/app/login/login.component.html
@@ -1,4 +1,8 @@
 <div id="bg-login" class="img-fluid">
+    <a class="navbar-brand m-0 ml-5 pt-3" href="/home#inicio">
+      <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="100px" height="100px"
+        class="img-fluid">
+    </a>
      <!-- caixa de entrada login -->
     <div class="row mx-0" id="test">
         <div class="col-md-2"></div>
