--- a/FrontEnd/ConectaMais/src/app/login/login.component.html
+++ b/FrontEnd/ConectaMais/src/app/login/login.component.html
@@ -6,7 +6,7 @@
      <!-- caixa de entrada login -->
     <div class="row mx-0" id="test">
         <div class="col-md-2"></div>
-        <div class="col-md-4 d-inline justify-content-center text-center  " id="form-login">
+        <div class="col-md-4 d-inline justify-content-center text-center" id="form-login">
             <h3 class="mt-3">LOGIN</h3>
             <form class="mx-5  text-left">
                 <div class="form-group">
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <label for="exampleInputPassword1">Senha</label>
                     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                     <a routerLink='/home'><small id="emailHelp" class="form-text text-muted text-right">Clique aqui
+                     <a routerLink='/cadastrar'><small id="emailHelp" class="form-text text-muted text-right">Clique aqui
                          para se cadastrar.</small></a>
                 </div>
                 <div class="col-md-12 d-flex justify-content-center ">
