--- a/FrontEnd/ConectaMais/src/app/login/login.component.html
+++ b/FrontEnd/ConectaMais/src/app/login/login.component.html
@@ -6,21 +6,20 @@
             <h3 class="mt-3">LOGIN</h3>
             <form class="mx-5  text-left">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Endereço de email</label>
-
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    <label for="email">Endereço de email</label>
+                    <input [(ngModel)]='userLogin.email' type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp"
                       placeholder="Seu email">
                     <small id="emailHelp" class="form-text text-muted">Não compartilhamos seu email com
                       ninguém.</small>
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Senha</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                     <a routerLink='/home'><small id="emailHelp" class="form-text text-muted text-right">Clique aqui
+                    <label for="senha">Senha</label>
+                    <input [(ngModel)]='userLogin.senha' type="password" class="form-control" id="senha" name="senha" placeholder="Senha">
+                     <a routerLink='/cadastrar'><small id="emailHelp" class="form-text text-muted text-right">Clique aqui
                          para se cadastrar.</small></a>
                 </div>
                 <div class="col-md-12 d-flex justify-content-center ">
-                     <button class="button button1">Entrar</button>
+                     <button (click)='entrar()' class="button button1">Entrar</button>
                 </div>
             </form>
         </div>
