--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
@@ -1,25 +1,13 @@
 <div class="container-fluid">
+  <a class="m-0 ml-5 pt-3 position-absolute" href="/home#inicio" style="z-index: 10;">
+    <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="100px" height="100px"
+      class="img-fluid">
+  </a>
   <div class="row">
-    <div class="col-12 pt1 p-0  ">
-      <img src="/assets/img/fig08.jpg" width="100%" alt="">
+    <div class="col-12 p-0">
+      <img src="/assets/img/fig08.jpg" width="100%" height="650px" alt="" class="img-fluid">
     </div>
     <div class="col-12 d-flex justify-content-center zind">CADASTRO</div>
-    <div class="col-12 pt2">
-      <div class="row">
-        <img src="" alt="">
-        <div class="col-1"></div>
-        <div class="col-5 quadrado1 p-5 mr-2 mt-5">
-          <p><b>Cadastre-se na nossa plataforma e interaja com as instituições</b> que te aproximaram do mundo da
-            tecnologia! Abrace essa oportunidade... </p>
-        </div>
-
-        <div class="col-5 quadrado2 p-5 ml-2 mt-5">
-          <p><b>Cadastre a sua instituição</b> e faça parte da nossa plataforma. Dê visibilidade aos seus programas,
-            bootcamps e hackathons ao seu público alvo!</p>
-        </div>
-        <div class="col-1"></div>
-      </div>
-    </div>
     <div class="col-1"></div>
     <div class="col-10 mt-5  mb-5 usuario">
       <h2 class="mt-5">Usuário</h2>
@@ -58,18 +46,15 @@
         </div>
         <div class="form-group" *ngIf="showBlock">
           <label for="cidade" class="d-flex ">Cidade:</label>
-          <input class=" form-control" type="text" name="cidade" id="cidade"
-            placeholder="Locais de atuação">
+          <input class=" form-control" type="text" name="cidade" id="cidade" placeholder="Locais de atuação">
         </div>
         <div class="form-group" *ngIf="showBlock">
           <label for="idadeMin" class="d-flex ">Idade mínima de participantes:</label>
-          <input class="form-control" type="number" name="IdadeMin" id="IdadeMin"
-            placeholder="Entre com número">
+          <input class="form-control" type="number" name="IdadeMin" id="IdadeMin" placeholder="Entre com número">
         </div>
         <div class="form-group" *ngIf="showBlock">
           <label for="idadeMax" class="d-flex ">Idade máxima de participantes:</label>
-          <input class="form-control" type="number" name="IdadeMax" id="IdadeMax"
-            placeholder="Entre com número">
+          <input class="form-control" type="number" name="IdadeMax" id="IdadeMax" placeholder="Entre com número">
         </div>
         <div class="form-group" *ngIf="showBlock">
           <label for="escolaridade" class="d-flex ">Escolaridade mínima de participantes:</label>
@@ -99,10 +84,11 @@
           </select>
         </div>
         <!-- /instituiçao for selecionada -->
-    
+
         <div class="form-group">
           <label for="senha" class="d-flex ">Senha:</label>
-          <input (input)="confirmarSenha($event)"  class="form-control" type="password" name="senha " id="senha" placeholder="Sua senha">
+          <input (input)="confirmarSenha($event)" class="form-control" type="password" name="senha " id="senha"
+            placeholder="Sua senha">
         </div>
         <div class="form-group">
           <label for="confirmSenha" class="d-flex ">Confirme sua senha:</label>
