--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.css
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.css
@@ -1,9 +1,22 @@
+
+
+#secao01 {
+  /* fundo com a imagem */
+  background-image: url("/assets/img/fig08.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  margin: 0;
+  border: 0;
+  height: 650px;
+}
+
 .container-fluid {
-  background-color: #225555;
+  background-color: #007a80;
 }
 
 .pt2 {
-  background-color: #225555;
+  background-color: #007a80;
 }
 
 .quadrado1,
@@ -22,7 +35,7 @@
 }
 
 .usuario {
-  background-color: #007a80;
+  background-color: #225555;
   border-radius: 30px;
   height: max-content;
   color: white;
@@ -35,18 +48,17 @@
 }
 
 .style-button {
-  color: #225555 !important;
+  color: #007a80 !important;
   background-color: #fff !important;
-  border-color: #225555 !important;
+  border-color: #007a80 !important;
   font-weight: bolder;
   border-width: 3px !important;
-
 }
 
 .style-button:hover {
   color: white !important;
-  background-color: #225555 !important;
-  border-color: #225555 !important;
+  background-color: #007a80 !important;
+  border-color: #007a80 !important;
   font-weight: bolder;
   border-width: 3px !important;
 
@@ -57,67 +69,5 @@
   font-size: 50px;
   color: white;
   text-shadow: 5px 5px 20px black;
-}
-=======
-.pt1{
-    margin-top: -250px;
-    opacity: 58%;
-}
-.container-fluid{
-    background-color: #225555;
-}
-.pt2{
-    background-color: #225555;
-    margin-top: -200px;
-}
-
-.quadrado1, .quadrado2{
-    background-color: #007a80;
-    border-radius: 30px;
-    height: 600px;
-    color: white;
-    font-size: 36px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-.quadrado1 p, .quadrado2 p{
-    margin-top: 50px;
-}
-.usuario{
-    background-color: #007a80;
-    border-radius: 30px;
-    height: 550px;
-    color: white;
-    font-size: 36px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-.usuario{
-    font-size: 20px;
-}
-
-.style-button{
-    color: #225555!important;
-    background-color: #fff!important;
-    border-color: #225555!important;
-    font-weight: bolder;
-    border-width: 3px!important;
-    
-}
-.style-button:hover{
-    color: white!important;
-    background-color: #225555!important;
-    border-color: #225555!important;
-    font-weight: bolder;
-    border-width: 3px!important;
-    
-}
-
-.zind{
-    margin-top: -480px;
-    font-size: 50px;
-    font-family: 'Intro';
-    color: white;
-    text-shadow: 5px 5px 20px black;
 }
 
